<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">Andro RDP</string>
<string name="server_hint">Server IP or Domain Name</string>
<string name="connect_now">Connect Now</string>
<string name="port_hint">Default: 3389</string>
<string name="server">RDP Server:</string>
<string name="port">Port:</string>
<string name="username">Username:</string>
<string name="password">Password:</string>
<string name="optional_hint">(Optional)</string>
<string name="domain">Domain:</string>
<string name="required_indicator">*</string>
<string name="invalid_field_title">Invalid Field</string>
<string name="invalid_server">The Server field cannot be blank. Please enter a valid server IP or domain name.</string>
<string name="invalid_port">The Port field cannot be blank. Please enter a valid port number.</string>
<string name="invalid_server_and_port">The Server and Port fields cannot be blank. Please enter a valid server IP or domain name, and a valid Port number.</string>
<string name="ok">OK</string>
<string name="invalid_port_format">Please only use numbers in the port field</string>
<string name="error">Error</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="sure_to_disconnect">Are you sure you want to disconnect?</string>
<string name="hide">Hide</string>
<string name="zoom_label">Zoom:</string>
<string name="original_zoom_label">1x Zoom</string>
<string name="menu_show_keyboard">Show Keyboard</string>
<string name="menu_show_win_keyboard">Windows Keys</string>
<string name="menu_disconnect">Disconnect</string>
<string name="menu_zoom">Zoom</string>
<string name="menu_screenshot">Take Screenshot</string>
<string name="menu_stats">Show Stats</string>
<string name="disconnect">Disconnect</string>
<string name="send">Send</string>
<string name="menu_show_input_field">Show Input Field</string>
<string name="keyboard_delete">Del</string>
<string name="keyboard_home">Home</string>
<string name="keyboard_end">End</string>
<string name="keyboard_page_up">PgUp</string>
<string name="keyboard_page_down">PgDn</string>
<string name="keyboard_alt">Alt</string>
<string name="keyboard_ctrl">Ctrl</string>
<string name="keyboard_esc">Esc</string>
<string name="keyboard_tab">Tab</string>
<string name="keyboard_windows">Win</string>
<string name="keyboard_shift">Shift</string>
<string name="keyboard_hide">Hide</string>
<string name="add_new_connection">New Connection</string>
<string name="edit_connection_settings">Edit Connection Settings</string>
<string name="menu_edit_connection">Edit Connection Settings</string>
<string name="menu_delete_connection">Delete Connection</string>
<string name="menu_connect">Connect</string>
<string name="save">Save</string>
<string name="sure_to_delete_connection">Are you sure you want to delete this connection?</string>
<string name="confirm">Please Confirm</string>
<string name="show_extra">Show Extra Options</string>
<string name="hide_extra">Hide Extra Options</string>
<string name="quick_connect">Quick Connect</string>
<string name="resolution">Screen Resolution</string>
<string name="resolution_prompt">Choose a Screen Resolution</string>
<string name="encryption">Encryption Level</string>
<string name="encryption_prompt">Choose a Encryption Level</string>
<string name="color_depth">Color Depth</string>
<string name="color_depth_prompt">Choose a Color Depth</string>
</resources>
